<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/root_layout_login"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:focusable="true"
              android:focusableInTouchMode="true"
              android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="30dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:id="@+id/tv_login_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/userAccount"
            android:textColor="@color/textColor87"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:background="@drawable/edit_bg"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/accountInput"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_toRightOf="@id/tv_login_account"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/input_login_account"
                android:padding="10dp"
                android:singleLine="true"
                android:textSize="14sp"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="10dp"
                android:src="@mipmap/mobile"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/tv_login_psw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/loginPassword"
            android:textColor="@color/textColor87"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:background="@drawable/edit_bg"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <EditText
                android:imeOptions="actionDone"
                android:id="@+id/passwordInput"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_toRightOf="@id/tv_login_psw"
                android:layout_weight="1"
                android:background="@null"
                android:inputType="textPassword"
                android:hint="@string/input_login_psw"
                android:padding="10dp"
                android:singleLine="true"
                android:textSize="14sp"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="10dp"
                android:src="@mipmap/close"/>
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/login"
        style="@style/btnStyle"
        android:layout_marginTop="44dp"
        android:text="@string/login"
        android:textSize="16sp"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_findPsw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:paddingBottom="15dp"
            android:paddingLeft="25dp"
            android:paddingRight="20dp"
            android:paddingTop="15dp"
            android:text="@string/find_psw"
            android:textColor="@color/textColor54"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/tv_regist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:paddingBottom="15dp"
            android:paddingLeft="15dp"
            android:paddingRight="20dp"
            android:paddingTop="15dp"
            android:text="@string/account_regist"
            android:textColor="@color/textColor54"/>
    </FrameLayout>


</LinearLayout>
